tests/failing/dont_assign_global_const.dodo.todo
// Expected: Cannot assign to constant 'value'

const value: u32 = 1234;

fn main() {
    value = 5678;
}
